# wasm-in-wasm

./: index.html  wasm-in-wasm-bin-23b3c719a07beb8f.js  wasm-in-wasm-bin-b4cd045644997263.js
.github/workflows/: pages.yml
app/: Cargo.toml  README.md  index.html
app/.cargo/: config.toml
app/src/: app.rs  main.rs
demo-component/: Cargo.toml  README.md
demo-component/.cargo/: config.toml
demo-component/src/: lib.rs
wit/: world.wit
wit-derive/: Cargo.toml
wit-derive-tests/: Cargo.toml
wit-derive-tests/src/: main.rs
wit-derive-tests/tests/: simple_inline.rs
wit-derive-tests/wit/: world.wit
wit-derive/context/: gen-api-docs.md  spec.md  wasm_component_layer.md  wasm_runtime_layer.md  wit_parser.md
wit-derive/src/: codegen.rs  lib.rs  parser.rs
