[package]
name = "wasm-in-wasm"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "wasm-in-wasm-bin"
path = "src/main.rs"


[dependencies]
eframe = { version = "0.31", features = [ "glow" ] } # you can see the default features here: https://github.com/emilk/egui/blob/master/crates/eframe/Cargo.toml#L34
egui = { version = "0.31" }
egui-typed-input = { git = "https://github.com/TimTheBig/egui_typed_input", version = "0.1.0" }
env_logger = "0.11.8"
log = "0.4.27"
ordered-float = "5.0.0"
wasmi = "0.47"
wasm_component_layer = "0.1.18"
wasm_runtime_layer = "0.5"
wasmi_runtime_layer = "0.47.0"
semver = "1.0.26"
wit-bindgen = "0.43.0"
rfd = "0.15.4"

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3.77"
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
web-sys = { version = "0.3.77", features = [
    "ResponseInit",
    "DecompressionStream",
    "ReadableStream",
    "Response",
    "CompressionFormat",
    "WritableStream",
    "ReadableWritablePair",
    "StreamPipeOptions",
    "ReadableStreamDefaultReader",
    "BlobPropertyBag",
    "Blob",
    "Performance",
    "Window"
  ] }

[patch.crates-io]
# expected `&[u8]`, found `Cursor<&[u8]>`
# https://github.com/DouglasDwyer/wasm_component_layer/issues/25
wasm_component_layer = { git = "https://github.com/juntyr/wasm_component_layer", branch = "resource-transfer-new" }

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = "s"
#strip = true