[package]
name = "wit-derive-tests"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
semver = "1.0.26"
wasm_component_layer = "0.1.18"
wasm_runtime_layer = "0.5"
wasmi_runtime_layer = "0.47"
wasmprinter = "0.236.0"
wat = "1.236.0"
wit-component = { version = "0.236.0", features = ["dummy-module", "wat"] }
wit-derive = { path = "../wit-derive" }
wit-parser = "0.236.0"


[patch.crates-io]
# expected `&[u8]`, found `Cursor<&[u8]>`
# https://github.com/DouglasDwyer/wasm_component_layer/issues/25
wasm_component_layer = { git = "https://github.com/juntyr/wasm_component_layer", branch = "resource-transfer-new" }
