[package]
name = "wit-derive"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
wit-parser = "0.235.0"
anyhow = "1.0"
wasm_component_layer = "0.1"

[patch.crates-io]
# expected `&[u8]`, found `Cursor<&[u8]>`
# https://github.com/DouglasDwyer/wasm_component_layer/issues/25
wasm_component_layer = { git = "https://github.com/juntyr/wasm_component_layer", branch = "resource-transfer-new" }
